--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "2": "^3.0.0",
+    "firebase": "^11.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.5.1",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
